# pokefinder

./: .gitignore  README.md
data/: .gitignore  contracts.py  main.py  merge.py  postprocess.py  pyproject.toml  query.graphql  schema.py  test_hist.py  transform.py
data/in/: categories.json
data/lib/: constants.py  schema.py
data/lib/images/: cache.py  colors.py  distance.py  fetch.py  hist.py  process.py
data/lib/transform/: pokemon.py  utils.py
data/meta/: colors.json
pokefinder/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
pokefinder/public/data/: pokedex.json  pokemon.json
pokefinder/src/: App.tsx  main.tsx
pokefinder/src/lib/api/: pokedex.ts
pokefinder/src/lib/components/: FilteredPokemonList.tsx  GenBadge.tsx  PaginationControls.tsx  PokeTypes.tsx  PokemonCard.tsx  PokemonList.tsx  constants.ts
pokefinder/src/lib/components/filter-bar/: DisabledTypeControl.tsx  FilterBar.tsx  FilterProvider.tsx  FlagFilters.tsx  GenFilterControl.tsx  NameFilter.tsx  TypeFilters.tsx  TypeSelector.tsx  types.ts  useFilters.ts
pokefinder/src/lib/components/generic/: MultiTogglePanel.tsx  TriStateButton.tsx
pokefinder/src/lib/hooks/: usePagination.ts
pokefinder/src/lib/theme/: color.ts  components.ts  dark.ts
pokefinder/src/lib/types/: core.ts  generics.ts  index.ts  pokemon.ts
pokefinder/src/lib/utils/: boolean.ts  icons.tsx
pokefinder/src/providers/: PokedexProvider.tsx  usePokedex.ts
